# keg-volume-monitors

./: README.md
monitors/shared-lib/: rgb_led.cpp  rgb_led.h  (+2 more)
server/: .tool-versions  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
server/api/: api.py  migrate.sh
server/api/db/: __init__.py  device_measurements.py  devices.py  service_accounts.py  users.py
server/api/db_migrations/versions/: 20250407T155413_initial_migration.py  20250409T141626_initial_migration.py  20250422T191501_create_migration.py  20250514T120603_create_migration.py  20250514T120603_intial_migration.py  20250602T104810_add_users_table.py  20250603T181011_add_devices_api_key.py  20250603T181011_create_migration.py  20250611T210151_add_service_accounts_table.py
server/api/lib/: config.py  exceptions.py  json.py  time.py  units.py  util.py
server/api/lib/devices/: __init__.py  particle.py
server/api/resources/: __init__.py  auth.py  device_measurements.py  device_status.py  devices.py  ui.py  users.py
server/config/: default.json
server/deploy/docker-local/: .gitignore  Dockerfile  docker-compose.yml  docker-local.env  nginx.conf
server/deploy/docker-local/scripts/: seed-db.py
server/ui/: README.md  angular.json  index.html  package-lock.json  package.json
server/ui/src/: index.html  styles.scss
server/ui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  models.ts
server/ui/src/app/_services/: data.service.ts
server/ui/src/app/devices/: calibrate-device-dialog.html  devices.component.html  devices.component.scss  devices.component.ts
server/ui/src/app/errors/: errors.component.html  errors.component.scss  errors.component.ts
server/ui/src/app/header/: header.component.html  header.component.ts
server/ui/src/app/login/: login.component.html  login.component.ts
server/ui/src/app/profile/: profile.component.html  profile.component.ts
server/ui/src/app/users/: users.component.html  users.component.scss  users.component.ts
server/ui/src/app/utils/: form-validators.ts  helpers.ts
(+28 files in other folders)
